2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/Makefile.am: Removed vice.dsp

	* arch/win32/vice.dsw: Removed vice.dsp

2008-07-04  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* Makefile.am, arch/win32/ui.c, clipboard.c, clipboard.h: Moved
	the common clipboard code that Spiro made to the new common
	files called 'clipboard.c' and 'clipboard.h'.

	* arch/amigaos/c128uires.h, arch/amigaos/c64uires.h,
	arch/amigaos/cbm2uires.h, arch/amigaos/intl.c,
	arch/amigaos/intl.txt, arch/amigaos/petuires.h,
	arch/amigaos/plus4uires.h, arch/amigaos/private.h,
	arch/amigaos/ui.c, arch/amigaos/uires.h,
	arch/amigaos/vic20uires.h: Added text-only copy and paste
	support to the amiga ports.

	* arch/amigaos/joyai.c: Corrected some typos.

	* arch/amigaos/video.c: Fixed a wrongly placed #endif.

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/unix/macosx/Makefile.am: Make sure the file
	VICE.xcodeproj/project.pbxproj is included in the source
	distribution.

	* arch/unix/macosx/Resources/English.lproj/Makefile.am: Make
	sure some MacOS files are included in the source distribution.

2008-07-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/win32/ui.c, c128/c128mem.c, c64/c64mem.c, cbm2/cbm2mem.c,
	mem.h, monitor/monitor.c, pet/petmem.c, plus4/plus4mem.c,
	vic20/vic20mem.c: Fixed the returned values of the
	mem_get_screen_parameter() of some of the emulators, and added a
	bank parameter to the mem_get_screen_parameter() function, this
	was needed to get it to work for xcbm2.

	* sound.h: Added a static inline 2-channel digital audio mixing
	routine.

	* c64/digimax.c, pet/petsound.c, plus4/ted-sound.c,
	vic20/vic20sound.c: Fixed to use proper digital audio mixing.

2008-07-02  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/Makefile.am: Renamed _all.dsp to _vice.dsp

	* arch/win32/_all.dsp, arch/win32/_vice.dsp: renamed _all.dsp to
	_vice.dsp.

2008-07-02  Andreas Matthies  <andreas.matthies@gmx.net>
